<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutAnimation="@anim/rc_layout_anim"
    tools:context=".ui.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/rc_layout_anim">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/header_main_activity"
                android:contentDescription="@string/cd_header_color" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/header_avatar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:alpha="0.3"
                android:outlineProvider="bounds"
                android:scaleType="centerCrop"
                android:src="@drawable/user1"
                app:riv_corner_radius="30dp" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                android:background="@drawable/ic_arrow_back"
                android:elevation="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar_recieved"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="8dp"
                    android:outlineProvider="bounds"
                    android:scaleType="centerCrop"
                    android:transitionName="avatar_transition"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp"
                    tools:src="@color/black" />

                <TextView
                    android:id="@+id/tv_company_recieved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_username_recieved"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/company"
                    android:textSize="16sp"
                    android:transitionName="company_transition" />

                <TextView
                    android:id="@+id/tv_username_recieved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_avatar_recieved"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/opensans_bold"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textSize="26sp"
                    android:transitionName="username_transition" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/follow_container"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="48dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="24dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="25dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/bg_follow"
                            android:src="@drawable/bg_follow" />

                        <RelativeLayout
                            android:layout_width="120dp"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/tv_followers_recieved"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_centerVertical="true"
                                android:fontFamily="@font/opensans_bold"
                                android:text="@string/followers_size"
                                android:textColor="@color/firstColor"
                                android:textSize="25sp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true">

                            <TextView
                                android:id="@+id/tv_following_recieved"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:fontFamily="@font/opensans_bold"
                                android:text="@string/following_size"
                                android:textColor="@color/firstColor"
                                android:textSize="25sp" />

                        </RelativeLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/follow_container"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="25dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/bg_name"
                    android:src="@drawable/recyclerview_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.59"
                        android:fontFamily="@font/opensans_semibold"
                        android:gravity="center"
                        android:text="@string/name_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_name_recieved"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_bold"
                        android:gravity="center"
                        android:text="@string/name_recieved"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_name"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="25dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/bg_location"
                    android:src="@drawable/recyclerview_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.59"
                        android:fontFamily="@font/opensans_semibold"
                        android:gravity="center"
                        android:text="@string/location_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_location_recieved"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_bold"
                        android:gravity="center"
                        android:text="@string/location_recieved"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_location"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="48dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="25dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/bg_repository"
                    android:src="@drawable/recyclerview_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.59"
                        android:fontFamily="@font/opensans_semibold"
                        android:gravity="center"
                        android:text="@string/repository_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_repository_recieved"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_bold"
                        android:gravity="center"
                        android:text="@string/repository_recieved"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_share"
        android:elevation="8dp"
        android:fontFamily="@font/opensans_bold"
        android:onClick="share"
        android:padding="16dp"
        android:text="@string/share"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />


</RelativeLayout>