<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="190dp"
        android:layout_height="210dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="14dp"
        app:cardElevation ="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/recyclerview_bg"
            android:padding="4dp">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_avatar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/opensans_bold"
                android:maxLines="2"
                android:text="@string/username"
                android:textSize="16sp"
                android:transitionName="username_transition" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_username"
                android:layout_centerHorizontal="true"
                android:alpha="0.7"
                android:ellipsize="end"
                android:fontFamily="@font/opensans_semibold"
                android:maxLines="2"
                android:text="@string/company"
                android:textAlignment="center"
                android:transitionName="company_transition" />

            <TextView
                android:id="@+id/followers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:alpha="0.7"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/followers"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/followers_text"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:fontFamily="@font/opensans_bold"
                android:maxLines="1"
                android:text="@string/followers_size"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:elevation="6dp"
                android:src="@color/black"
                android:transitionName="avatar_transition"
                app:civ_border_color="@color/fourColor"
                app:civ_border_width="3dp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>